--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css"
     integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
   <!-- ************************************************今回作成する styles.cssの読み込み -->
-  <link href="stylesheet/style.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
   <!-- ************************************************  -->
 </head>
 
